# minhook-rs

./: .gitignore  Cargo.toml  README.md  build.rs
examples/simple_hook/: Cargo.toml
examples/simple_hook/src/: main.rs
src/: error.rs  ffi.rs  function.rs  lib.rs  macros.rs  sync.rs
